[workspace]
members = [
    "rust/library",
    "rust/test_executor",
    "problems/problems_1",
    "problems/problems_2",
	"problems/problems_2766",
    "problems/problems_279",
	"problems/problems_2844",
	"problems/problems_49",
	"problems/problems_2740",
	"problems/problems_239",
	"problems/problems_3106",
	"problems/problems_34",
	"problems/problems_102",
    "problems/problems_1379",
    "problems/problems_236",
	"problems/problems_116",
	"problems/problems_117",
	"problems/problems_133",
	"problems/problems_138",
	"problems/problems_699",
	"problems/problems_39",
	"problems/problems_215",
	"problems/problems_682",
	"problems/problems_56",
	"problems/problems_2961",
	"problems/problems_394",
	"problems/problems_3111",
	"problems/problems_5",
	"problems/problems_LCP_40",
	"problems/problems_169",
	"problems/problems_3128",
	"problems/problems_322",
	"problems/problems_3143",
	"problems/problems_21",
	"problems/problems_108",
	"problems/problems_572",
	"problems/problems_33",
	"problems/problems_98",
	"problems/problems_2808",
	"problems/problems_600",
	"problems/problems_15",
	"problems/problems_2398",
	"problems/problems_3129",
	"problems/problems_438",
	"problems/problems_3130",
	"problems/problems_48",
	"problems/problems_950",
	"problems/problems_3131",
	"problems/problems_207",
	"problems/problems_2553",
	"problems/problems_3132",
	"problems/problems_22",
	"problems/problems_2940",
	"problems/problems_55",
	"problems/problems_139",
	"problems/problems_1035",
	"problems/problems_19",
	"problems/problems_230",
	"problems/problems_2236",
	"problems/problems_762",
	"problems/problems_676",
	"problems/problems_24",
	"problems/problems_3151",
	"problems/problems_189",
	"problems/problems_1139",
	"problems/problems_3152",
	"problems/problems_199",
	"problems/problems_3148",
	"problems/problems_739",
	"problems/problems_3117",
	"problems/problems_LCR_007",
	"problems/problems_300",
	"problems/problems_2578",
	"problems/problems_LCP_40",
	"problems/problems_3137",
	"problems/problems_1143",
	"problems/problems_31",
	"problems/problems_LCR_014",
	"problems/problems_LCR_036",
	"problems/problems_551",
	"problems/problems_79",
	"problems/problems_25",
	"problems/problems_LCR_059",
	"problems/problems_LCR_062",
	"problems/problems_552",
	"problems/problems_LCR_074",
	"problems/problems_128",
	"problems/problems_3154",
	"problems/problems_LCR_079",
	"problems/problems_76",
	"problems/problems_3007",
	"problems/problems_LCR_088",
	"problems/problems_114",
	"problems/problems_3133",
	"problems/problems_153",
	"problems/problems_LCR_047",
	"problems/problems_3145",
	"problems/problems_295",
	"problems/problems_LCR_021",
	"problems/problems_3146",
	"problems/problems_LCR_089",
	"problems/problems_LCR_080",
	"problems/problems_152",
	"problems/problems_698",
	"problems/problems_LCR_001",
	"problems/problems_LCR_031",
	"problems/problems_105",
	"problems/problems_42",
	"problems/problems_LCR_042",
	"problems/problems_240",
	"problems/problems_3134",
	"problems/problems_LCR_068",
	"problems/problems_208",
	"problems/problems_3144",
	"problems/problems_LCR_008",
	"problems/problems_131",
	"problems/problems_3142",
	"problems/problems_LCR_015",
	"problems/problems_45",
	"problems/problems_3153",
	"problems/problems_LCR_048",
	"problems/problems_148",
	"problems/problems_3127",
	"problems/problems_LCR_105",
	"problems/problems_LCR_090",
	"problems/problems_437",
	"problems/problems_238",
	"problems/problems_1450",
	"problems/problems_LCR_063",
	"problems/problems_84",
	"problems/problems_416",
	"problems/problems_2024",
	"problems/problems_LCR_037",
	"problems/problems_72",
	"problems/problems_2708",
	"problems/problems_LCR_075",
	"problems/problems_287",
	"problems/problems_2860",
	"problems/problems_LCR_081",
	"problems/problems_4",
	"problems/problems_3174",
	"problems/problems_LCR_092",
	"problems/problems_23",
	"problems/problems_3176",
	"problems/problems_LCR_106",
	"problems/problems_3177",
	"problems/problems_LCR_049",
	"problems/problems_LCR_093",
	"problems/problems_51",
	"problems/problems_32",
	"problems/problems_977",
	"problems/problems_LCR_009",
	"problems/problems_LCR_016",
	"problems/problems_146",
	"problems/problems_124",
	"problems/problems_2181",
	"problems/problems_LCR_107",
	"problems/problems_2552",
	"problems/problems_LCR_002",
	"problems/problems_2555",
	"problems/problems_LCR_032",
	"problems/problems_2576",
	"problems/problems_LCR_043",
	"problems/problems_LCR_070",
	"problems/problems_2390",
	"problems/problems_LCR_050",
	"problems/problems_2848",
	"problems/problems_LCR_060",
	"problems/problems_LCR_064",
	"problems/problems_LCR_082",
	"problems/problems_1184",
	"problems/problems_815",
	"problems/problems_LCR_094",
	"problems/problems_2332",
	"problems/problems_LCR_108",
	"problems/problems_LCR_038",
	"problems/problems_2414",
	"problems/problems_2376",
	"problems/problems_LCR_051",
	"problems/problems_2374",
	"problems/problems_LCR_076",
	"problems/problems_LCR_095",
	"problems/problems_997",
	"problems/problems_LCR_024",
	"problems/problems_LCR_109",
	"problems/problems_1014",
	"problems/problems_LCR_010",
	"problems/problems_2207",
	"problems/problems_LCR_017",
	"problems/problems_2306",
	"problems/problems_LCR_083",
	"problems/problems_2535",
	"problems/problems_LCR_096",
	"problems/problems_2516",
	"problems/problems_LCR_003",
	"problems/problems_2286",
	"problems/problems_LCR_033",
	"problems/problems_LCR_044",
	"problems/problems_2073",
	"problems/problems_1845",
	"problems/problems_983",
	"problems/problems_1870",
	"problems/problems_1928",
	"problems/problems_1227",
	"problems/problems_2187",
	"problems/problems_LCR_052",
	"problems/problems_134",
	"problems/problems_LCR_110",
	"problems/problems_871",
	"problems/problems_1436",
	"problems/problems_3171",
	"problems/problems_3162",
	"problems/problems_3164",
	"problems/problems_3158",
	"problems/problems_LCR_065",
	"problems/problems_1884",
	"problems/problems_LCR_097",
	"problems/problems_887",
	"problems/problems_3200",
	"problems/problems_3194",
	"problems/problems_3193",
	"problems/problems_3191",
	"problems/problems_3192",
	"problems/problems_LCR_025",
	"problems/problems_908",
	"problems/problems_LCR_084",
	"problems/problems_910",
	"problems/problems_3184",
	"problems/problems_3185",
	"problems/problems_3175",
	"problems/problems_3180",
	"problems/problems_3181",
	"problems/problems_684",
	"problems/problems_LCR_053",
	"problems/problems_3211",
	"problems/problems_3216",
	"problems/problems_3259",
	"problems/problems_2278",
	"problems/problems_2140",
	"problems/problems_2873",
	"problems/problems_2874",
	"problems/problems_344",
	"problems/problems_75",
	"problems/problems_779",
	"problems/problems_3304",
	"problems/problems_3307",
	"problems/problems_1394",
	"problems/problems_1865",
	"problems/problems_1353",
	"problems/problems_1751",
	"problems/problems_3439",
	"problems/problems_3440",
	"problems/problems_3169",
	"problems/problems_1900",
	"problems/problems_2410",
	"problems/problems_1290",
	"problems/problems_3136",
	"problems/problems_3201",
	"problems/problems_3202",
	"problems/problems_2163",
	"problems/problems_1233",
	"problems/problems_1948",
	"problems/problems_1957",
	"problems/problems_1695",
	"problems/problems_1717",
	"problems/problems_2322",
	"problems/problems_3487",
	"problems/problems_3480",
	"problems/problems_2210",
	"problems/problems_2044",
	"problems/problems_2411",
	"problems/problems_2419",
	"problems/problems_2683",
	"problems/problems_118",
	"problems/problems_2561",
	"problems/problems_2106",
	"problems/problems_904",
	"problems/problems_3477",
	"problems/problems_3479",
	"problems/problems_3363",
	"problems/problems_808",
	"problems/problems_231",
	"problems/problems_869",
	"problems/problems_2438",
	"problems/problems_2787",
	"problems/problems_326",
	"problems/problems_1780",
	"problems/problems_342",
	"problems/problems_1323",
	"problems/problems_837",
	"problems/problems_679",
	"problems/problems_2348",
	"problems/problems_1277",
	"problems/problems_1504",
	"problems/problems_3195",
	"problems/problems_3197",
	"problems/problems_1493",
	"problems/problems_498",
	"problems/problems_3000",
	"problems/problems_3459",
	"problems/problems_3446",
	"problems/problems_3021",
	"problems/problems_36",
	"problems/problems_37",
	"problems/problems_1792",
	"problems/problems_3025",
	"problems/problems_3027",
	"problems/problems_3516",
	"problems/problems_2749",
	"problems/problems_3495",
	"problems/problems_1304",
	"problems/problems_1317",
	"problems/problems_2327",
	"problems/problems_1733",
	"problems/problems_2785",
	"problems/problems_3227",
	"problems/problems_3541",
	"problems/problems_966",
	"problems/problems_1935",
	"problems/problems_2197",
	"problems/problems_2349",
	"problems/problems_3408",
	"problems/problems_3484",
	"problems/problems_3508",
	"problems/problems_1912",
	"problems/problems_3005",
	"problems/problems_165",
	"problems/problems_166",
]

[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"
authors = ["benhao"]
description = "LeetCode solutions in Rust"
readme = "README.md"

[[test]]
name = "solution_test"
path = "rust/test_executor/tests/test.rs"

[[test]]
name = "solutions_test"
path = "rust/test_executor/tests/solutions_test.rs"

[dependencies]
serde_json = "1.0"
rand = "0.8.4"
regex = "1.10.5"
assert_float_eq = "1"
test_executor = { path = "rust/test_executor", features = ["run_test"] }
solution_1 = { path = "problems/problems_1", features = ["solution_1"] }
solution_2 = { path = "problems/problems_2", features = ["solution_2"] }
solution_2766 = { path = "problems/problems_2766", features = ["solution_2766"] }
solution_279 = { path = "problems/problems_279", features = ["solution_279"] }
solution_2844 = { path = "problems/problems_2844", features = ["solution_2844"] }
solution_49 = { path = "problems/problems_49", features = ["solution_49"] }
solution_2740 = { path = "problems/problems_2740", features = ["solution_2740"] }
solution_239 = { path = "problems/problems_239", features = ["solution_239"] }
solution_3106 = { path = "problems/problems_3106", features = ["solution_3106"] }
solution_34 = { path = "problems/problems_34", features = ["solution_34"] }
solution_102 = { path = "problems/problems_102", features = ["solution_102"] }
solution_1379 = { path = "problems/problems_1379", features = ["solution_1379"] }
solution_236 = { path = "problems/problems_236", features = ["solution_236"] }
solution_116 = { path = "problems/problems_116", features = ["solution_116"] }
solution_117 = { path = "problems/problems_117", features = ["solution_117"] }
solution_133 = { path = "problems/problems_133", features = ["solution_133"] }
solution_138 = { path = "problems/problems_138", features = ["solution_138"] }
solution_699 = { path = "problems/problems_699", features = ["solution_699"] }
solution_39 = { path = "problems/problems_39", features = ["solution_39"] }
solution_215 = { path = "problems/problems_215", features = ["solution_215"] }
solution_682 = { path = "problems/problems_682", features = ["solution_682"] }
solution_56 = { path = "problems/problems_56", features = ["solution_56"] }
solution_2961 = { path = "problems/problems_2961", features = ["solution_2961"] }
solution_394 = { path = "problems/problems_394", features = ["solution_394"] }
solution_3111 = { path = "problems/problems_3111", features = ["solution_3111"] }
solution_5 = { path = "problems/problems_5", features = ["solution_5"] }
solution_169 = { path = "problems/problems_169", features = ["solution_169"] }
solution_3128 = { path = "problems/problems_3128", features = ["solution_3128"] }
solution_322 = { path = "problems/problems_322", features = ["solution_322"] }
solution_3143 = { path = "problems/problems_3143", features = ["solution_3143"] }
solution_21 = { path = "problems/problems_21", features = ["solution_21"] }
solution_108 = { path = "problems/problems_108", features = ["solution_108"] }
solution_572 = { path = "problems/problems_572", features = ["solution_572"] }
solution_33 = { path = "problems/problems_33", features = ["solution_33"] }
solution_98 = { path = "problems/problems_98", features = ["solution_98"] }
solution_2808 = { path = "problems/problems_2808", features = ["solution_2808"] }
solution_600 = { path = "problems/problems_600", features = ["solution_600"] }
solution_15 = { path = "problems/problems_15", features = ["solution_15"] }
solution_2398 = { path = "problems/problems_2398", features = ["solution_2398"] }
solution_3129 = { path = "problems/problems_3129", features = ["solution_3129"] }
solution_438 = { path = "problems/problems_438", features = ["solution_438"] }
solution_3130 = { path = "problems/problems_3130", features = ["solution_3130"] }
solution_48 = { path = "problems/problems_48", features = ["solution_48"] }
solution_950 = { path = "problems/problems_950", features = ["solution_950"] }
solution_3131 = { path = "problems/problems_3131", features = ["solution_3131"] }
solution_207 = { path = "problems/problems_207", features = ["solution_207"] }
solution_2553 = { path = "problems/problems_2553", features = ["solution_2553"] }
solution_3132 = { path = "problems/problems_3132", features = ["solution_3132"] }
solution_22 = { path = "problems/problems_22", features = ["solution_22"] }
solution_2940 = { path = "problems/problems_2940", features = ["solution_2940"] }
solution_55 = { path = "problems/problems_55", features = ["solution_55"] }
solution_139 = { path = "problems/problems_139", features = ["solution_139"] }
solution_1035 = { path = "problems/problems_1035", features = ["solution_1035"] }
solution_19 = { path = "problems/problems_19", features = ["solution_19"] }
solution_230 = { path = "problems/problems_230", features = ["solution_230"] }
solution_2236 = { path = "problems/problems_2236", features = ["solution_2236"] }
solution_762 = { path = "problems/problems_762", features = ["solution_762"] }
solution_676 = { path = "problems/problems_676", features = ["solution_676"] }
solution_24 = { path = "problems/problems_24", features = ["solution_24"] }
solution_3151 = { path = "problems/problems_3151", features = ["solution_3151"] }
solution_189 = { path = "problems/problems_189", features = ["solution_189"] }
solution_1139 = { path = "problems/problems_1139", features = ["solution_1139"] }
solution_3152 = { path = "problems/problems_3152", features = ["solution_3152"] }
solution_199 = { path = "problems/problems_199", features = ["solution_199"] }
solution_3148 = { path = "problems/problems_3148", features = ["solution_3148"] }
solution_739 = { path = "problems/problems_739", features = ["solution_739"] }
solution_3117 = { path = "problems/problems_3117", features = ["solution_3117"] }
solution_LCR_007 = { path = "problems/problems_LCR_007", features = ["solution_LCR_007"] }
solution_300 = { path = "problems/problems_300", features = ["solution_300"] }
solution_2578 = { path = "problems/problems_2578", features = ["solution_2578"] }
solution_LCP_40 = { path = "problems/problems_LCP_40", features = ["solution_LCP_40"] }
solution_3137 = { path = "problems/problems_3137", features = ["solution_3137"] }
solution_1143 = { path = "problems/problems_1143", features = ["solution_1143"] }
solution_31 = { path = "problems/problems_31", features = ["solution_31"] }
solution_LCR_014 = { path = "problems/problems_LCR_014", features = ["solution_LCR_014"] }
solution_LCR_036 = { path = "problems/problems_LCR_036", features = ["solution_LCR_036"] }
solution_551 = { path = "problems/problems_551", features = ["solution_551"] }
solution_79 = { path = "problems/problems_79", features = ["solution_79"] }
solution_25 = { path = "problems/problems_25", features = ["solution_25"] }
solution_LCR_059 = { path = "problems/problems_LCR_059", features = ["solution_LCR_059"] }
solution_LCR_062 = { path = "problems/problems_LCR_062", features = ["solution_LCR_062"] }
solution_552 = { path = "problems/problems_552", features = ["solution_552"] }
solution_LCR_074 = { path = "problems/problems_LCR_074", features = ["solution_LCR_074"] }
solution_128 = { path = "problems/problems_128", features = ["solution_128"] }
solution_3154 = { path = "problems/problems_3154", features = ["solution_3154"] }
solution_LCR_079 = { path = "problems/problems_LCR_079", features = ["solution_LCR_079"] }
solution_76 = { path = "problems/problems_76", features = ["solution_76"] }
solution_3007 = { path = "problems/problems_3007", features = ["solution_3007"] }
solution_LCR_088 = { path = "problems/problems_LCR_088", features = ["solution_LCR_088"] }
solution_114 = { path = "problems/problems_114", features = ["solution_114"] }
solution_3133 = { path = "problems/problems_3133", features = ["solution_3133"] }
solution_153 = { path = "problems/problems_153", features = ["solution_153"] }
solution_LCR_047 = { path = "problems/problems_LCR_047", features = ["solution_LCR_047"] }
solution_3145 = { path = "problems/problems_3145", features = ["solution_3145"] }
solution_295 = { path = "problems/problems_295", features = ["solution_295"] }
solution_LCR_021 = { path = "problems/problems_LCR_021", features = ["solution_LCR_021"] }
solution_3146 = { path = "problems/problems_3146", features = ["solution_3146"] }
solution_LCR_089 = { path = "problems/problems_LCR_089", features = ["solution_LCR_089"] }
solution_LCR_080 = { path = "problems/problems_LCR_080", features = ["solution_LCR_080"] }
solution_152 = { path = "problems/problems_152", features = ["solution_152"] }
solution_698 = { path = "problems/problems_698", features = ["solution_698"] }
solution_LCR_001 = { path = "problems/problems_LCR_001", features = ["solution_LCR_001"] }
solution_LCR_031 = { path = "problems/problems_LCR_031", features = ["solution_LCR_031"] }
solution_105 = { path = "problems/problems_105", features = ["solution_105"] }
solution_42 = { path = "problems/problems_42", features = ["solution_42"] }
solution_LCR_042 = { path = "problems/problems_LCR_042", features = ["solution_LCR_042"] }
solution_240 = { path = "problems/problems_240", features = ["solution_240"] }
solution_3134 = { path = "problems/problems_3134", features = ["solution_3134"] }
solution_LCR_068 = { path = "problems/problems_LCR_068", features = ["solution_LCR_068"] }
solution_208 = { path = "problems/problems_208", features = ["solution_208"] }
solution_3144 = { path = "problems/problems_3144", features = ["solution_3144"] }
solution_LCR_008 = { path = "problems/problems_LCR_008", features = ["solution_LCR_008"] }
solution_131 = { path = "problems/problems_131", features = ["solution_131"] }
solution_3142 = { path = "problems/problems_3142", features = ["solution_3142"] }
solution_LCR_015 = { path = "problems/problems_LCR_015", features = ["solution_LCR_015"] }
solution_45 = { path = "problems/problems_45", features = ["solution_45"] }
solution_3153 = { path = "problems/problems_3153", features = ["solution_3153"] }
solution_LCR_048 = { path = "problems/problems_LCR_048", features = ["solution_LCR_048"] }
solution_148 = { path = "problems/problems_148", features = ["solution_148"] }
solution_3127 = { path = "problems/problems_3127", features = ["solution_3127"] }
solution_LCR_105 = { path = "problems/problems_LCR_105", features = ["solution_LCR_105"] }
solution_LCR_090 = { path = "problems/problems_LCR_090", features = ["solution_LCR_090"] }
solution_437 = { path = "problems/problems_437", features = ["solution_437"] }
solution_238 = { path = "problems/problems_238", features = ["solution_238"] }
solution_1450 = { path = "problems/problems_1450", features = ["solution_1450"] }
solution_LCR_063 = { path = "problems/problems_LCR_063", features = ["solution_LCR_063"] }
solution_84 = { path = "problems/problems_84", features = ["solution_84"] }
solution_416 = { path = "problems/problems_416", features = ["solution_416"] }
solution_2024 = { path = "problems/problems_2024", features = ["solution_2024"] }
solution_LCR_037 = { path = "problems/problems_LCR_037", features = ["solution_LCR_037"] }
solution_72 = { path = "problems/problems_72", features = ["solution_72"] }
solution_2708 = { path = "problems/problems_2708", features = ["solution_2708"] }
solution_LCR_075 = { path = "problems/problems_LCR_075", features = ["solution_LCR_075"] }
solution_287 = { path = "problems/problems_287", features = ["solution_287"] }
solution_2860 = { path = "problems/problems_2860", features = ["solution_2860"] }
solution_LCR_081 = { path = "problems/problems_LCR_081", features = ["solution_LCR_081"] }
solution_4 = { path = "problems/problems_4", features = ["solution_4"] }
solution_3174 = { path = "problems/problems_3174", features = ["solution_3174"] }
solution_LCR_092 = { path = "problems/problems_LCR_092", features = ["solution_LCR_092"] }
solution_23 = { path = "problems/problems_23", features = ["solution_23"] }
solution_3176 = { path = "problems/problems_3176", features = ["solution_3176"] }
solution_LCR_106 = { path = "problems/problems_LCR_106", features = ["solution_LCR_106"] }
solution_3177 = { path = "problems/problems_3177", features = ["solution_3177"] }
solution_LCR_049 = { path = "problems/problems_LCR_049", features = ["solution_LCR_049"] }
solution_LCR_093 = { path = "problems/problems_LCR_093", features = ["solution_LCR_093"] }
solution_51 = { path = "problems/problems_51", features = ["solution_51"] }
solution_32 = { path = "problems/problems_32", features = ["solution_32"] }
solution_977 = { path = "problems/problems_977", features = ["solution_977"] }
solution_LCR_009 = { path = "problems/problems_LCR_009", features = ["solution_LCR_009"] }
solution_LCR_016 = { path = "problems/problems_LCR_016", features = ["solution_LCR_016"] }
solution_146 = { path = "problems/problems_146", features = ["solution_146"] }
solution_124 = { path = "problems/problems_124", features = ["solution_124"] }
solution_2181 = { path = "problems/problems_2181", features = ["solution_2181"] }
solution_LCR_107 = { path = "problems/problems_LCR_107", features = ["solution_LCR_107"] }
solution_2552 = { path = "problems/problems_2552", features = ["solution_2552"] }
solution_LCR_002 = { path = "problems/problems_LCR_002", features = ["solution_LCR_002"] }
solution_2555 = { path = "problems/problems_2555", features = ["solution_2555"] }
solution_LCR_032 = { path = "problems/problems_LCR_032", features = ["solution_LCR_032"] }
solution_2576 = { path = "problems/problems_2576", features = ["solution_2576"] }
solution_LCR_043 = { path = "problems/problems_LCR_043", features = ["solution_LCR_043"] }
solution_LCR_070 = { path = "problems/problems_LCR_070", features = ["solution_LCR_070"] }
solution_2390 = { path = "problems/problems_2390", features = ["solution_2390"] }
solution_LCR_050 = { path = "problems/problems_LCR_050", features = ["solution_LCR_050"] }
solution_2848 = { path = "problems/problems_2848", features = ["solution_2848"] }
solution_LCR_060 = { path = "problems/problems_LCR_060", features = ["solution_LCR_060"] }
solution_LCR_064 = { path = "problems/problems_LCR_064", features = ["solution_LCR_064"] }
solution_LCR_082 = { path = "problems/problems_LCR_082", features = ["solution_LCR_082"] }
solution_1184 = { path = "problems/problems_1184", features = ["solution_1184"] }
solution_815 = { path = "problems/problems_815", features = ["solution_815"] }
solution_LCR_094 = { path = "problems/problems_LCR_094", features = ["solution_LCR_094"] }
solution_2332 = { path = "problems/problems_2332", features = ["solution_2332"] }
solution_LCR_108 = { path = "problems/problems_LCR_108", features = ["solution_LCR_108"] }
solution_LCR_038 = { path = "problems/problems_LCR_038", features = ["solution_LCR_038"] }
solution_2414 = { path = "problems/problems_2414", features = ["solution_2414"] }
solution_2376 = { path = "problems/problems_2376", features = ["solution_2376"] }
solution_LCR_051 = { path = "problems/problems_LCR_051", features = ["solution_LCR_051"] }
solution_2374 = { path = "problems/problems_2374", features = ["solution_2374"] }
solution_LCR_076 = { path = "problems/problems_LCR_076", features = ["solution_LCR_076"] }
solution_LCR_095 = { path = "problems/problems_LCR_095", features = ["solution_LCR_095"] }
solution_997 = { path = "problems/problems_997", features = ["solution_997"] }
solution_LCR_024 = { path = "problems/problems_LCR_024", features = ["solution_LCR_024"] }
solution_LCR_109 = { path = "problems/problems_LCR_109", features = ["solution_LCR_109"] }
solution_1014 = { path = "problems/problems_1014", features = ["solution_1014"] }
solution_LCR_010 = { path = "problems/problems_LCR_010", features = ["solution_LCR_010"] }
solution_2207 = { path = "problems/problems_2207", features = ["solution_2207"] }
solution_LCR_017 = { path = "problems/problems_LCR_017", features = ["solution_LCR_017"] }
solution_2306 = { path = "problems/problems_2306", features = ["solution_2306"] }
solution_LCR_083 = { path = "problems/problems_LCR_083", features = ["solution_LCR_083"] }
solution_2535 = { path = "problems/problems_2535", features = ["solution_2535"] }
solution_LCR_096 = { path = "problems/problems_LCR_096", features = ["solution_LCR_096"] }
solution_2516 = { path = "problems/problems_2516", features = ["solution_2516"] }
solution_LCR_003 = { path = "problems/problems_LCR_003", features = ["solution_LCR_003"] }
solution_2286 = { path = "problems/problems_2286", features = ["solution_2286"] }
solution_LCR_033 = { path = "problems/problems_LCR_033", features = ["solution_LCR_033"] }
solution_LCR_044 = { path = "problems/problems_LCR_044", features = ["solution_LCR_044"] }
solution_2073 = { path = "problems/problems_2073", features = ["solution_2073"] }
solution_1845 = { path = "problems/problems_1845", features = ["solution_1845"] }
solution_983 = { path = "problems/problems_983", features = ["solution_983"] }
solution_1870 = { path = "problems/problems_1870", features = ["solution_1870"] }
solution_1928 = { path = "problems/problems_1928", features = ["solution_1928"] }
solution_1227 = { path = "problems/problems_1227", features = ["solution_1227"] }
solution_2187 = { path = "problems/problems_2187", features = ["solution_2187"] }
solution_LCR_052 = { path = "problems/problems_LCR_052", features = ["solution_LCR_052"] }
solution_134 = { path = "problems/problems_134", features = ["solution_134"] }
solution_LCR_110 = { path = "problems/problems_LCR_110", features = ["solution_LCR_110"] }
solution_871 = { path = "problems/problems_871", features = ["solution_871"] }
solution_1436 = { path = "problems/problems_1436", features = ["solution_1436"] }
solution_3171 = { path = "problems/problems_3171", features = ["solution_3171"] }
solution_3162 = { path = "problems/problems_3162", features = ["solution_3162"] }
solution_3164 = { path = "problems/problems_3164", features = ["solution_3164"] }
solution_3158 = { path = "problems/problems_3158", features = ["solution_3158"] }
solution_LCR_065 = { path = "problems/problems_LCR_065", features = ["solution_LCR_065"] }
solution_1884 = { path = "problems/problems_1884", features = ["solution_1884"] }
solution_LCR_097 = { path = "problems/problems_LCR_097", features = ["solution_LCR_097"] }
solution_887 = { path = "problems/problems_887", features = ["solution_887"] }
solution_3200 = { path = "problems/problems_3200", features = ["solution_3200"] }
solution_3194 = { path = "problems/problems_3194", features = ["solution_3194"] }
solution_3193 = { path = "problems/problems_3193", features = ["solution_3193"] }
solution_3191 = { path = "problems/problems_3191", features = ["solution_3191"] }
solution_3192 = { path = "problems/problems_3192", features = ["solution_3192"] }
solution_LCR_025 = { path = "problems/problems_LCR_025", features = ["solution_LCR_025"] }
solution_908 = { path = "problems/problems_908", features = ["solution_908"] }
solution_LCR_084 = { path = "problems/problems_LCR_084", features = ["solution_LCR_084"] }
solution_910 = { path = "problems/problems_910", features = ["solution_910"] }
solution_3184 = { path = "problems/problems_3184", features = ["solution_3184"] }
solution_3185 = { path = "problems/problems_3185", features = ["solution_3185"] }
solution_3175 = { path = "problems/problems_3175", features = ["solution_3175"] }
solution_3180 = { path = "problems/problems_3180", features = ["solution_3180"] }
solution_3181 = { path = "problems/problems_3181", features = ["solution_3181"] }
solution_684 = { path = "problems/problems_684", features = ["solution_684"] }
solution_LCR_053 = { path = "problems/problems_LCR_053", features = ["solution_LCR_053"] }
solution_3211 = { path = "problems/problems_3211", features = ["solution_3211"] }
solution_3216 = { path = "problems/problems_3216", features = ["solution_3216"] }
solution_3259 = { path = "problems/problems_3259", features = ["solution_3259"] }
solution_2278 = { path = "problems/problems_2278", features = ["solution_2278"] }
solution_2140 = { path = "problems/problems_2140", features = ["solution_2140"] }
solution_2873 = { path = "problems/problems_2873", features = ["solution_2873"] }
solution_2874 = { path = "problems/problems_2874", features = ["solution_2874"] }
solution_344 = { path = "problems/problems_344", features = ["solution_344"] }
solution_75 = { path = "problems/problems_75", features = ["solution_75"] }
solution_779 = { path = "problems/problems_779", features = ["solution_779"] }
solution_3304 = { path = "problems/problems_3304", features = ["solution_3304"] }
solution_3307 = { path = "problems/problems_3307", features = ["solution_3307"] }
solution_1394 = { path = "problems/problems_1394", features = ["solution_1394"] }
solution_1865 = { path = "problems/problems_1865", features = ["solution_1865"] }
solution_1353 = { path = "problems/problems_1353", features = ["solution_1353"] }
solution_1751 = { path = "problems/problems_1751", features = ["solution_1751"] }
solution_3439 = { path = "problems/problems_3439", features = ["solution_3439"] }
solution_3440 = { path = "problems/problems_3440", features = ["solution_3440"] }
solution_3169 = { path = "problems/problems_3169", features = ["solution_3169"] }
solution_1900 = { path = "problems/problems_1900", features = ["solution_1900"] }
solution_2410 = { path = "problems/problems_2410", features = ["solution_2410"] }
solution_1290 = { path = "problems/problems_1290", features = ["solution_1290"] }
solution_3136 = { path = "problems/problems_3136", features = ["solution_3136"] }
solution_3201 = { path = "problems/problems_3201", features = ["solution_3201"] }
solution_3202 = { path = "problems/problems_3202", features = ["solution_3202"] }
solution_2163 = { path = "problems/problems_2163", features = ["solution_2163"] }
solution_1233 = { path = "problems/problems_1233", features = ["solution_1233"] }
solution_1948 = { path = "problems/problems_1948", features = ["solution_1948"] }
solution_1957 = { path = "problems/problems_1957", features = ["solution_1957"] }
solution_1695 = { path = "problems/problems_1695", features = ["solution_1695"] }
solution_1717 = { path = "problems/problems_1717", features = ["solution_1717"] }
solution_2322 = { path = "problems/problems_2322", features = ["solution_2322"] }
solution_3487 = { path = "problems/problems_3487", features = ["solution_3487"] }
solution_3480 = { path = "problems/problems_3480", features = ["solution_3480"] }
solution_2210 = { path = "problems/problems_2210", features = ["solution_2210"] }
solution_2044 = { path = "problems/problems_2044", features = ["solution_2044"] }
solution_2411 = { path = "problems/problems_2411", features = ["solution_2411"] }
solution_2419 = { path = "problems/problems_2419", features = ["solution_2419"] }
solution_2683 = { path = "problems/problems_2683", features = ["solution_2683"] }
solution_118 = { path = "problems/problems_118", features = ["solution_118"] }
solution_2561 = { path = "problems/problems_2561", features = ["solution_2561"] }
solution_2106 = { path = "problems/problems_2106", features = ["solution_2106"] }
solution_904 = { path = "problems/problems_904", features = ["solution_904"] }
solution_3477 = { path = "problems/problems_3477", features = ["solution_3477"] }
solution_3479 = { path = "problems/problems_3479", features = ["solution_3479"] }
solution_3363 = { path = "problems/problems_3363", features = ["solution_3363"] }
solution_808 = { path = "problems/problems_808", features = ["solution_808"] }
solution_231 = { path = "problems/problems_231", features = ["solution_231"] }
solution_869 = { path = "problems/problems_869", features = ["solution_869"] }
solution_2438 = { path = "problems/problems_2438", features = ["solution_2438"] }
solution_2787 = { path = "problems/problems_2787", features = ["solution_2787"] }
solution_326 = { path = "problems/problems_326", features = ["solution_326"] }
solution_1780 = { path = "problems/problems_1780", features = ["solution_1780"] }
solution_342 = { path = "problems/problems_342", features = ["solution_342"] }
solution_1323 = { path = "problems/problems_1323", features = ["solution_1323"] }
solution_837 = { path = "problems/problems_837", features = ["solution_837"] }
solution_679 = { path = "problems/problems_679", features = ["solution_679"] }
solution_2348 = { path = "problems/problems_2348", features = ["solution_2348"] }
solution_1277 = { path = "problems/problems_1277", features = ["solution_1277"] }
solution_1504 = { path = "problems/problems_1504", features = ["solution_1504"] }
solution_3195 = { path = "problems/problems_3195", features = ["solution_3195"] }
solution_3197 = { path = "problems/problems_3197", features = ["solution_3197"] }
solution_1493 = { path = "problems/problems_1493", features = ["solution_1493"] }
solution_498 = { path = "problems/problems_498", features = ["solution_498"] }
solution_3000 = { path = "problems/problems_3000", features = ["solution_3000"] }
solution_3459 = { path = "problems/problems_3459", features = ["solution_3459"] }
solution_3446 = { path = "problems/problems_3446", features = ["solution_3446"] }
solution_3021 = { path = "problems/problems_3021", features = ["solution_3021"] }
solution_36 = { path = "problems/problems_36", features = ["solution_36"] }
solution_37 = { path = "problems/problems_37", features = ["solution_37"] }
solution_1792 = { path = "problems/problems_1792", features = ["solution_1792"] }
solution_3025 = { path = "problems/problems_3025", features = ["solution_3025"] }
solution_3027 = { path = "problems/problems_3027", features = ["solution_3027"] }
solution_3516 = { path = "problems/problems_3516", features = ["solution_3516"] }
solution_2749 = { path = "problems/problems_2749", features = ["solution_2749"] }
solution_3495 = { path = "problems/problems_3495", features = ["solution_3495"] }
solution_1304 = { path = "problems/problems_1304", features = ["solution_1304"] }
solution_1317 = { path = "problems/problems_1317", features = ["solution_1317"] }
solution_2327 = { path = "problems/problems_2327", features = ["solution_2327"] }
solution_1733 = { path = "problems/problems_1733", features = ["solution_1733"] }
solution_2785 = { path = "problems/problems_2785", features = ["solution_2785"] }
solution_3227 = { path = "problems/problems_3227", features = ["solution_3227"] }
solution_3541 = { path = "problems/problems_3541", features = ["solution_3541"] }
solution_966 = { path = "problems/problems_966", features = ["solution_966"] }
solution_1935 = { path = "problems/problems_1935", features = ["solution_1935"] }
solution_2197 = { path = "problems/problems_2197", features = ["solution_2197"] }
solution_2349 = { path = "problems/problems_2349", features = ["solution_2349"] }
solution_3408 = { path = "problems/problems_3408", features = ["solution_3408"] }
solution_3484 = { path = "problems/problems_3484", features = ["solution_3484"] }
solution_3508 = { path = "problems/problems_3508", features = ["solution_3508"] }
solution_1912 = { path = "problems/problems_1912", features = ["solution_1912"] }
solution_3005 = { path = "problems/problems_3005", features = ["solution_3005"] }
solution_165 = { path = "problems/problems_165", features = ["solution_165"] }
solution_166 = { path = "problems/problems_166", features = ["solution_166"] }
