module(name = "leetcode")

bazel_dep(name = "rules_cc", version = "0.2.16")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)

bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "nlohmann_json", version = "3.12.0")

daily = use_repo_rule("//:extensions.bzl", "daily")
daily(name = "daily")
